--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
-		<img src="steam.jpeg" alt="steamcommunity.com/id/eofodase" />
+		<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 	</body>
 
 </html>
