--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>My personal site</title>
+		<title>Twitter @henrique_054 - My personal site</title>
 		<meta charset="utf-8" />
 	</head>
 
