--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	</head>
 
 	<body>
-		<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
-		<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
+		<div>
+			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
+			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
+		</div>
 	</body>
 
 </html>
