--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Twitter @henrique_054 - My personal site</title>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" type="text/css" href="estilo.css"> </link>
 	</head>
 
 	<body>
