--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div>
+		<div id="wrap">
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 		</div>
