--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<body>
 		<div id="wrap">
+			<h1>Principais informãções</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 		</div>
