--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<body>
 		<div id="wrap">
 			<h1>Principais informações</h1>
+			<center>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
+			</center>
 		</div>
 	</body>
 
