--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div id="wrap">
+		<div id="center">
 			<h1>Principais informações</h1>
 			<center>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
