--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	</head>
 
 	<body>
-		<div id="center">
-			<h1>Principais informações</h1>
+		<div id="cente">
 			<center>
+			<h1>Principais informações</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 			</center>
