--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="cente">
 			<center>
-			<h1>Principais informações</h1>
+			<h1>My GOHub</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 			</center>
