--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <html>
 	<head>
-		<title>Twitter @henrique_054 - My personal site</title>
+		<title>Twitter @henrique_054</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="estilo.css"> </link>
+		<link rel="stylesheet" type="text/css" href="normalize.css"> </link>
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
 
 	<body>
-		<div id="cente">
+		<div id="center">
 			<center>
-			<h1>My GOHub</h1>
+			<h1>My personal site</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 			</center>
