--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 
 <html>
 	<head>
@@ -11,7 +11,7 @@
 	<body>
 		<div id="center">
 			<center>
-			<h1>My personal site</h1>
+			<h1>Minhas configurações da STEAM</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 			</center>
