--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Twitter @henrique_054</title>
+		<title>Config's</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="normalize.css"> </link>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
@@ -11,7 +11,7 @@
 	<body>
 		<div id="center">
 			<center>
-			<h1>Minhas configurações da STEAM</h1>
+			<h1>Twitter: @henrique_054</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank"/>
 			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
 			</center>
