--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<body>
 		<div id="center">
 			<center>
-			<h1>Twitter: @henrique_054</h1>
+			<h1>yea</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank" />
-			<img src="steam.jpg" alt="steamcommunity.com/id/eofodase" />
+			<img src="yea.png" alt="steamcommunity.com/id/eofodase" />
 			</center>
 		</div>
 	</body>
