--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<center>
 			<h1>yea</h1>
 			<a href="https://steamcommunity.com/id/eofodase/" class="img" target="_blank" />
-			<img src="yea.png" alt="steamcommunity.com/id/eofodase" />
+			<img src="yea.jpg" alt="steamcommunity.com/id/eofodase" />
 			</center>
 		</div>
 	</body>
